fixed transaction/post and cliques json format
